--- a/githubProfilecard/app.css
+++ b/githubProfilecard/app.css
@@ -1,8 +1,5 @@
-* {
-    box-sizing: border-box;
-}
 
-body {
+.git-container {
     margin: 0;
     display: flex;
     justify-content: center;
@@ -12,11 +9,11 @@ body {
     background-color: #452c63;
 }
 
-.search {
+.git-container .search {
     text-align: center;
 }
 
-.searchInput {
+.git-container .searchInput {
     padding: 5px;
     border-radius: 5px;
     border: 2px solid white;
@@ -24,19 +21,19 @@ body {
     margin-bottom: 5px;
 }
 
-.profile-container {
+.git-container .profile-container {
     width: 500px;
     background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 100%);
     border-radius: 10px;
-    display: flex;
+    display:flex;
     padding: 2rem;
     box-shadow: 0 5px 10px #b5b5b5b5;
     letter-spacing: .5px;
     height: auto;
 }
 
-.profile-container img {
+.git-container .profile-container img {
     border: 3px solid white;
     width: 100px;
     display: flex;
@@ -45,30 +42,27 @@ body {
     justify-items: center;
 }
 
-.profile-container .userInfo {
-    margin-top: 0;
+.git-container .profile-container .userInfo {
     margin-left: 2rem;
 }
 
-.profile-container .infoList {
+.git-container .profile-container .infoList {
     display: flex;
     justify-content: space-between;
     padding: 0;
     width: 200px;
 }
 
-.profile-container .infoList li {
+.git-container .profile-container .infoList li {
     list-style: none;
 }
 
-.profile-container .infoList li i {
+.git-container .profile-container .infoList li i {
     color: white;
     margin-right: 10px;
 }
 
-.profile-container .repo-container {
-    justify-content: space-between;
-    max-width: 300px;
+.git-container .profile-container .repo-container {
     display: flex;
     flex-flow: row wrap;
     padding: 0;
@@ -76,18 +70,20 @@ body {
     margin-top: 0;
 }
 
-.profile-container .repo-list {
+.git-container .profile-container .repo-list {
     list-style: none;
     padding: .25rem .5rem;
     margin-top: .4rem;
     text-align: center;
+    margin-right: .5rem;
     background-color: #D8BFD8;
     cursor: pointer;
     text-decoration: none;
     border-radius: 5px;
+    
 }
 
-a {
+.git-container a {
     text-decoration: none;
     color: #452c63;
 }
