--- a/movieWebsite/app.css
+++ b/movieWebsite/app.css
@@ -1,14 +1,12 @@
-* {
-    box-sizing: border-box;
-}
 
-body {
+
+.movieweb-container {
     margin: 0;
     background-color: #13274F;
     font-family: 'Inter';
 }
 
-header {
+.movieweb-container header {
     width: 100%;
     display: flex;
     justify-content: flex-end;
@@ -16,11 +14,11 @@ header {
     padding: 1rem;
 }
 
-.search {
+.movieweb-container .search {
     background-color: transparent;
 }
 
-.search .searchInput {
+.movieweb-container .search .searchInput {
     padding: .5rem 1rem;
     outline: none;
     border-radius: 30px;
@@ -29,7 +27,7 @@ header {
     border: 2px solid #13274F;
 }
 
-.overview {
+.movieweb-container .overview {
     top: 0;
     left: 0;
     right: 0;
@@ -43,22 +41,22 @@ header {
     overscroll-behavior: contain;
 }
 
-.movie-container li:hover .overview {
+.movieweb-container .movie-container li:hover .overview {
     transform: translateY(0);
 }
 
-.movie-container {}
+.movieweb-container .movie-container {}
 
-.movie-list-container {
+.movieweb-container .movie-list-container {
     display: flex;
     flex-wrap: wrap;
 }
 
-.movie-container img {
+.movieweb-container .movie-container img {
     width: 100%;
 }
 
-.movie-container li {
+.movieweb-container .movie-container li {
     list-style: none;
     background-color: #1F305E;
     overflow: hidden;
@@ -72,20 +70,20 @@ header {
     width: 235px;
 }
 
-.movie-info {
+.movieweb-container .movie-info {
     display: flex;
     justify-content: space-between;
     padding: .5rem;
     align-items: center;
 }
 
-.movie-container li h3 {
+.movieweb-container .movie-container li h3 {
     margin: 0;
     margin-left: 1px;
     color: white;
 }
 
-.movie-container li span {
+.movieweb-container .movie-container li span {
     padding: .2rem .35rem;
     background-color: #13274F;
     justify-content: center;
