--- a/notesWebsite/app.css
+++ b/notesWebsite/app.css
@@ -1,4 +1,4 @@
-body {
+.notes-container {
     margin: 0;
     background-color: #0093E9;
     background-image: linear-gradient(160deg, #0093E9 0%, #80D0C7 50%);
@@ -10,23 +10,23 @@ body {
     background-attachment: fixed;
 }
 
-.note-container {
+.notes-container .note-container {
     background-color: #eeee;
     width: 350px;
     height: 350px;
     margin: 20px;
-    background-color: white;
+    background-color: transparent;
     display: inline-block;
 }
 
-.tools-container {
+.notes-container .tools-container {
     background-color: cadetblue;
     padding: .5rem;
     display: flex;
     justify-content: flex-end;
 }
 
-.tools-container button {
+.notes-container .tools-container button {
     background-color: transparent;
     color: white;
     border: none;
@@ -36,12 +36,12 @@ body {
     margin-left: .5rem;
 }
 
-.text-container {
+.notes-container .text-container {
     height: 100%;
     width: 100%;
 }
 
-.text-container textarea {
+.notes-container .text-container textarea {
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -49,11 +49,11 @@ body {
     border: none;
 }
 
-.tools-container button:hover {
+.notes-container .tools-container button:hover {
     color: cadetblue;
 }
 
-.addNote {
+.notes-container .addNote {
     position: fixed;
     right: 1rem;
     top: 1rem;
@@ -68,6 +68,6 @@ body {
     color: white;
 }
 
-.addNote:hover {
+.notes-container .addNote:hover {
     color: black;
 }
