--- a/quizWebsite/App.css
+++ b/quizWebsite/App.css
@@ -1,4 +1,4 @@
-body {
+.quiz-con {
     background-color: #b8c6db;
     margin: 0;
     min-height: 100vh;
@@ -7,7 +7,7 @@ body {
     justify-content: center;
 }
 
-.qiuz-container {
+.quiz-con .qiuz-container {
     width: 600px;
     background-color: white;
     box-shadow: 0 0 10px 5px rgba(0, 0, 0, .2);
@@ -16,16 +16,16 @@ body {
     overflow: hidden;
 }
 
-.quiz-header {
+.quiz-con .quiz-header {
     padding: 4rem;
 }
 
-ul {
+.quiz-con ul {
     list-style-type: none;
     padding: 0;
 }
 
-button {
+.quiz-con button {
     background-color: rgb(48, 48, 146);
     color: black;
     font-size: 1.3rem;
@@ -36,15 +36,15 @@ button {
     cursor: pointer;
 }
 
-button:hover {
+.quiz-con button:hover {
     background-color: rgb(15, 15, 88);
 }
 
-h2 {
+.quiz-con h2 {
     margin: 0;
 }
 
-ul li {
+.quiz-con ul li {
     font-size: 1.1rem;
     margin: 1rem 0;
 }
