--- a/todoList/app.css
+++ b/todoList/app.css
@@ -1,30 +1,28 @@
-* {
-    box-sizing: border-box;
-}
 
-body {
+.todo-container{
     margin: 0;
     background-color: #eeee;
     display: flex;
-    justify-content: center;
+    align-items: center;
     min-height: 100vh;
+    flex-direction: column;
 }
 
-h1 {
+.todo-container h1 {
     font-size: 6rem;
     color: #fd5c63;
     text-align: center;
     opacity: .4;
 }
 
-form {
+.todo-container form {
     max-width: 100%;
     outline: none;
     width: 400px;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
 
-.todoInput {
+.todo-container .todoInput {
     color: cadetblue;
     display: block;
     width: 100%;
@@ -33,11 +31,11 @@ form {
     border: none;
 }
 
-.todoInput::placeholder {
+.todo-container .todoInput::placeholder {
     color: #b5b5b5b5;
 }
 
-.todos {
+.todo-container .todos {
     background-color: white;
     width: 100%;
     list-style: none;
@@ -45,7 +43,7 @@ form {
     margin: 0;
 }
 
-.todos li {
+.todo-container .todos li {
     color: cadetblue;
     border-top: 1px solid #b5b5b5b5;
     font-size: 2rem;
@@ -53,12 +51,12 @@ form {
     padding: 5px 20px;
 }
 
-.todos li.completed {
+.todo-container .todos li.completed {
     text-decoration: line-through;
     color: #b5b5b5b5;
 }
 
-small {
+.todo-container small {
     color: #b5b5b5b5;
     display: block;
     text-align: center;
