--- a/sorting/App.css
+++ b/sorting/App.css
@@ -96,8 +96,18 @@
   right: 0;
   display: flex;
   flex-direction: column;
+  
 }
 
+.info-container-div{
+    display: inline-flex;
+    margin: 5px;
+    align-items: center;
+  
+}
+.info-container-div span{
+    margin-left: 10px;
+}
 
 
 @media (max-width:1000px){
