--- a/weatherWebsite/app.css
+++ b/weatherWebsite/app.css
@@ -18,6 +18,7 @@
     height: 400px;
     width: 400px;
     background-color: #5ebb93;
+    border-radius: 5px;
 }
 
 .weatehr-container .searchInput {
@@ -43,4 +44,34 @@
 
 .weatehr-container .weatherinfo-container span {
     padding: 1rem;
+}
+
+.weatehr-container .weather-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.weatehr-container .weather-form button{
+    width: 50%;
+    border-radius: 5px;
+    outline: none;
+    padding: .4rem;
+    cursor: pointer;
+    margin-top: 1rem;
+    border: none;
+}
+
+
+
+@media(max-width:500px){
+    .weatehr-container .container {
+        display: flex;
+        align-items: center;
+        text-align: center;
+        flex-direction: column;
+        height: 400px;
+        width: 90%;
+        background-color: #5ebb93;
+    }
 }
